--- a/RentalService/app/src/main/AndroidManifest.xml
+++ b/RentalService/app/src/main/AndroidManifest.xml
@@ -32,13 +32,13 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".InfoEditActivity"></activity>
+        <activity android:name=".activity.InfoEditActivity"></activity>
         <activity
-            android:name=".InfoAddActivity"
+            android:name=".activity.InfoAddActivity"
             android:theme="@android:style/Theme.Dialog" />
-        <activity android:name=".InfoDetailActivity" />
+        <activity android:name=".activity.InfoDetailActivity" />
         <activity
-            android:name=".MainActivity"
+            android:name=".activity.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/Theme.RentalService.NoActionBar"
             android:screenOrientation="portrait">
