장비 사진 추가 activity 틀 구현 및 layout 파일명 변경

--- a/RentalService/app/src/main/AndroidManifest.xml
+++ b/RentalService/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
             android:value="@string/facebook_app_id" />
 
         <activity android:name=".activity.InfoEditActivity" />
+        <activity android:name=".activity.GalleryAddActivity"/>
         <activity
             android:name=".activity.InfoAddActivity"
             android:theme="@android:style/Theme.Dialog" />
