--- a/RentalService/app/src/main/AndroidManifest.xml
+++ b/RentalService/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
             android:name=".activity.InfoAddActivity"
             android:theme="@android:style/Theme.Dialog" />
         <activity android:name=".activity.InfoDetailActivity" />
+        <activity android:name=".activity.UserMainActivity"/>
         <activity
             android:name=".activity.MainActivity"
             android:label="@string/app_name"
