--- a/RentalService/app/src/main/AndroidManifest.xml
+++ b/RentalService/app/src/main/AndroidManifest.xml
@@ -12,9 +12,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.RentalService">
+        <activity android:name=".activity.UserRentalSelectActivity"></activity>
+        <activity android:name=".activity.UserInfoDetailActivity" />
         <activity android:name=".activity.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -24,22 +27,28 @@
             android:value="@string/facebook_app_id" />
 
         <activity android:name=".activity.InfoEditActivity" />
-        <activity android:name=".activity.GalleryAddActivity"/>
+        <activity android:name=".activity.GalleryAddActivity" />
         <activity
             android:name=".activity.InfoAddActivity"
             android:theme="@android:style/Theme.Dialog" />
         <activity android:name=".activity.InfoDetailActivity" />
-        <activity android:name=".activity.UserMainActivity"/>
+        <activity
+            android:name=".activity.UserMainActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.RentalService.NoActionBar" />
         <activity
             android:name=".activity.MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.RentalService.NoActionBar">
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
 
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN" /> -->
+
+
+            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+            <!-- </intent-filter> -->
         </activity>
     </application>
 
