--- a/RentalService/app/src/main/AndroidManifest.xml
+++ b/RentalService/app/src/main/AndroidManifest.xml
@@ -29,6 +29,8 @@
 
         <activity android:name=".activity.InfoEditActivity" />
         <activity android:name=".activity.GalleryAddActivity" />
+        <activity android:name=".activity.GalleryEditActivity" />
+
         <activity
             android:name=".activity.InfoAddActivity"
             android:theme="@android:style/Theme.Dialog" />
