Rental Detail Admin 구현 완료

--- a/RentalService/app/src/main/AndroidManifest.xml
+++ b/RentalService/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
         <activity android:name=".activity.InfoEditActivity" />
         <activity android:name=".activity.GalleryAddActivity" />
         <activity android:name=".activity.GalleryEditActivity" />
+        <activity android:name=".activity.AdminCommentActivity"/>
 
         <activity
             android:name=".activity.InfoAddActivity"
