--- a/RentalService/app/src/main/AndroidManifest.xml
+++ b/RentalService/app/src/main/AndroidManifest.xml
@@ -16,11 +16,7 @@
         <activity android:name=".activity.UserRentalSelectActivity" />
         <activity android:name=".activity.UserInfoDetailActivity" />
         <activity android:name=".activity.LoginActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
 
         <meta-data
@@ -38,11 +34,19 @@
             android:name=".activity.InfoAddActivity"
             android:theme="@android:style/Theme.Dialog" />
         <activity android:name=".activity.InfoDetailActivity" />
+        <activity android:name=".activity.SelectLoginActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".activity.UserMainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.RentalService.NoActionBar" />
+            android:theme="@style/Theme.RentalService.NoActionBar"
+            />
         <activity
             android:name=".activity.MainActivity"
             android:label="@string/app_name"
