--- a/RentalService/app/src/main/AndroidManifest.xml
+++ b/RentalService/app/src/main/AndroidManifest.xml
@@ -51,6 +51,7 @@
             android:name=".activity.MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustNothing"
             android:theme="@style/Theme.RentalService.NoActionBar">
 
             <!-- <intent-filter> -->
