--- a/RentalService/app/src/main/AndroidManifest.xml
+++ b/RentalService/app/src/main/AndroidManifest.xml
@@ -6,20 +6,23 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_main"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_main_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.RentalService">
         <activity android:name=".activity.JoinActivity"
             android:theme="@android:style/ThemeOverlay.Material.Dialog"/>
-        <activity android:name=".activity.UserRentalSelectActivity" />
-        <activity android:name=".activity.UserInfoDetailActivity" />
+        <activity android:name=".activity.UserRentalSelectActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activity.UserInfoDetailActivity"
+            android:screenOrientation="portrait"/>
         <activity android:name=".activity.LoginActivity">
 
         </activity>
         <activity android:name=".activity.SplashActivity">
+            android:screenOrientation="portrait"
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -32,17 +35,22 @@
 
         <activity android:name=".activity.InfoEditActivity"
             android:theme="@android:style/ThemeOverlay.Material.Dialog" />
-        <activity android:name=".activity.GalleryAddActivity" />
-        <activity android:name=".activity.GalleryEditActivity" />
+        <activity android:name=".activity.GalleryAddActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activity.GalleryEditActivity"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".activity.AdminCommentActivity"
-            android:theme="@android:style/ThemeOverlay.Material.Dialog"/>
+            android:theme="@android:style/ThemeOverlay.Material.Dialog"
+            />
 
         <activity
             android:name=".activity.InfoAddActivity"
             android:theme="@android:style/ThemeOverlay.Material.Dialog" />
-        <activity android:name=".activity.InfoDetailActivity" />
-        <activity android:name=".activity.SelectLoginActivity">
+        <activity android:name=".activity.InfoDetailActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activity.SelectLoginActivity"
+            android:screenOrientation="portrait">
         </activity>
         <activity
             android:name=".activity.UserMainActivity"
