--- a/RentalService/app/src/main/AndroidManifest.xml
+++ b/RentalService/app/src/main/AndroidManifest.xml
@@ -21,8 +21,8 @@
         <activity android:name=".activity.LoginActivity">
 
         </activity>
-        <activity android:name=".activity.SplashActivity">
-            android:screenOrientation="portrait"
+        <activity android:name=".activity.SplashActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
