--- a/Server/package.json
+++ b/Server/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
-    "mongoose": "^4.4.5"
+    "mongoose": "^4.4.5",
+    "multer": "^1.4.2"
   }
 }
